--- a/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
@@ -8,54 +8,60 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="AddDentistPage">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="150"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Grid.Row="0">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Име:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="1">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Презиме:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="2">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Фамилия:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="3">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Контакт:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="4">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Професионален опит:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="0">
-            <TextBox Text="{Binding NewDentist.Name}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="1" >
-            <TextBox Text="{Binding NewDentist.MiddleName}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="2">
-            <TextBox Text="{Binding NewDentist.LastName}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="3">
-            <TextBox Text="{Binding NewDentist.Contact}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="4">
-            <TextBox Text="{Binding NewDentist.ProfessionalExperience}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="2" Grid.Row="5">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Добави" Command="{Binding AddDentist}" Height="20" Width="90"/>
-                <Button Content="Отказ" Command="{Binding NavigateToDentists}" Height="20" Width="90" Margin="20,0,0,0"/>
-            </StackPanel>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="250"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" Grid.Row="0">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Име:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="1">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Презиме:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="2">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Фамилия:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="3">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Контакт:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="4">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Професионален опит:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="0">
+                <TextBox Text="{Binding NewDentist.Name}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="1" >
+                <TextBox Text="{Binding NewDentist.MiddleName}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="2">
+                <TextBox Text="{Binding NewDentist.LastName}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="3">
+                <TextBox Text="{Binding NewDentist.Contact}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="4">
+                <TextBox Text="{Binding NewDentist.ProfessionalExperience}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="2" Grid.Row="5">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Content="Добави" Command="{Binding AddDentist}" Height="20" Width="90"/>
+                    <Button Content="Отказ" Command="{Binding NavigateToDentists}" Height="20" Width="90" Margin="20,0,0,0"/>
+                </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
