--- a/MDTManagment/MDTManagment/Views/Orders/AddOrderPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Orders/AddOrderPage.xaml
@@ -8,174 +8,206 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="AddOrderPage">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="150"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Grid.Row="0">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Вид поръчка:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="1">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Дата на постъпване:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="2">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Краен срок:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="3">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Цена:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="4">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Лицева дъга:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="5">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Артикулатор:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="6">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Метална проба:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="7">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Керамична проба:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="8">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Цвят на зъб:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="9">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Специални изисквания:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="10">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Заявени съставки:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="11">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Отпечатъчен материал:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="12">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Зъболекар:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="0">
-            <TextBox Text="{Binding NewOrder.Type}" Height="20" Margin="1,0,-1,-1"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="1" >
-            <TextBox Text="{Binding NewOrder.DateОfReceipt}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="2">
-            <TextBox Text="{Binding NewOrder.DeadLine}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="3">
-            <TextBox Text="{Binding NewOrder.Price}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="4">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0">
-                    <Button Height="20" Command="{Binding FacialArcIsFalse}" Content="Не" Margin="0,0,3,0"></Button>
-                </Grid>
-                <Grid Grid.Column="1">
-                    <Button Height="20" Command="{Binding FacialArcIsTrue}" Content="Да"></Button>
-                </Grid>
-            </Grid>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="5">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0">
-                    <Button Height="20" Command="{Binding ArticulatorIsFalse}" Content="Не" Margin="0,0,3,0"></Button>
-                </Grid>
-                <Grid Grid.Column="1">
-                    <Button Height="20" Command="{Binding ArticulatorIsTrue}" Content="Да"></Button>
-                </Grid>
-            </Grid>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="6">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0">
-                    <Button Height="20" Command="{Binding MetalTestIsFalse}" Content="Не" Margin="0,0,3,0"></Button>
-                </Grid>
-                <Grid Grid.Column="1">
-                    <Button Height="20" Command="{Binding MetalTestIsTrue}" Content="Да"></Button>
-                </Grid>
-            </Grid>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="7">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0">
-                    <Button Height="20" Command="{Binding CeramicTestIsFalse}" Content="Не" Margin="0,0,3,0"></Button>
-                </Grid>
-                <Grid Grid.Column="1">
-                    <Button Height="20" Command="{Binding CeramicTestIsTrue}" Content="Да"></Button>
-                </Grid>
-            </Grid>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="8">
-            <TextBox Text="{Binding NewOrder.ToothColour}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="9">
-            <TextBox Text="{Binding NewOrder.SpecialRequirements}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="10">
-            <TextBox Text="{Binding NewOrder.DeclaredIngredients}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="11">
-            <TextBox Text="{Binding NewOrder.TypeOfImpressionMaterial}" Height="20"></TextBox>
-        </Grid>
 
-        <Grid Grid.Column="1" Grid.Row="12" >
-            <ComboBox
-                Height="20"
-                ItemsSource="{Binding Dentists}" 
-                SelectedValue="{Binding NewOrder.DentistId}"
-                SelectedValuePath="Id"
-                DisplayMemberPath="Name">
-            </ComboBox>
-        </Grid>
-        <Grid Grid.Column="2" Grid.Row="1">
-            <StackPanel>
-                <TextBlock TextAlignment="Center" VerticalAlignment="Center"> 
-                *(мм/дд/гггг)
-                </TextBlock>
-                <TextBlock TextAlignment="Center" VerticalAlignment="Center">
-                *(месец/дата/година)
-                </TextBlock>
-                <TextBlock TextAlignment="Center" VerticalAlignment="Center">
-                *(час не е задължителен)
-                </TextBlock>
-            </StackPanel>
-        </Grid>
-        <Grid Grid.Column="2" Grid.Row="13">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Добави" Command="{Binding AddOrder}" Height="20" Width="90"/>
-                <Button Content="Отказ" Command="{Binding NavigateToOrdersPage}" Height="20" Width="90" Margin="20,0,0,0"/>
-            </StackPanel>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="250"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" Grid.Row="0">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Вид поръчка:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="1">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Дата на постъпване:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="2">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Краен срок:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="3">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Цена:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="4">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Лицева дъга:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="5">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Артикулатор:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="6">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Метална проба:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="7">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Керамична проба:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="8">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Цвят на зъб:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="9">                            
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Специални изисквания:</TextBlock>
+            </Grid>                                                       
+            <Grid Grid.Column="0" Grid.Row="10">                          
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Заявени съставки:</TextBlock>
+            </Grid>                                                       
+            <Grid Grid.Column="0" Grid.Row="11">                          
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Отпечатъчен материал:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="12">                           
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Зъболекар:</TextBlock>
+            </Grid>                                                        
+            <Grid Grid.Column="0" Grid.Row="13">                           
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Пациент:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="0">
+                <TextBox Text="{Binding NewOrder.Type}" Height="20" Margin="1,0,-1,-1"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="1" >
+                <TextBox Text="{Binding NewOrder.DateОfReceipt}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="2">
+                <TextBox Text="{Binding NewOrder.DeadLine}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="3">
+                <TextBox Text="{Binding NewOrder.Price}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="4">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <RadioButton GroupName="FacialArc" Content="Да" Command="{Binding FacialArcIsTrue}"></RadioButton>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <RadioButton IsChecked="True" GroupName="FacialArc" Content="Не" Command="{Binding FacialArcIsFalse}"></RadioButton>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="5">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <RadioButton GroupName="Articulator" Content="Да" Command="{Binding ArticulatorIsTrue}"></RadioButton>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <RadioButton IsChecked="True" GroupName="Articulator" Content="Не" Command="{Binding ArticulatorIsFalse}"></RadioButton>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="6">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <RadioButton GroupName="MetalTest" Content="Да" Command="{Binding MetalTestIsTrue}"></RadioButton>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <RadioButton IsChecked="True" GroupName="MetalTest" Content="Не" Command="{Binding MetalTestIsFalse}"></RadioButton>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="7">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <RadioButton GroupName="CeramicTest" Content="Да" Command="{Binding CeramicTestIsTrue}"></RadioButton>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <RadioButton IsChecked="True" GroupName="CeramicTest" Content="Не" Command="{Binding CeramicTestIsFalse}"></RadioButton>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="8">
+                <TextBox Text="{Binding NewOrder.ToothColour}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="9">
+                <TextBox Text="{Binding NewOrder.SpecialRequirements}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="10">
+                <TextBox Text="{Binding NewOrder.DeclaredIngredients}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="11">
+                <TextBox Text="{Binding NewOrder.TypeOfImpressionMaterial}" Height="20"></TextBox>
+            </Grid>
+
+            <Grid Grid.Column="1" Grid.Row="12" >
+                <ComboBox
+                    Height="20"
+                    ItemsSource="{Binding Dentists}" 
+                    SelectedValue="{Binding NewOrder.DentistId}"
+                    SelectedValuePath="Id"
+                    DisplayMemberPath="Name">
+                </ComboBox>
+            </Grid>
+
+            <Grid Grid.Column="1" Grid.Row="13" >
+                <ComboBox
+                    Height="20"
+                    ItemsSource="{Binding Patients}" 
+                    SelectedValue="{Binding NewOrder.PatientId}"
+                    SelectedValuePath="Id"
+                    DisplayMemberPath="Name">
+                </ComboBox>
+            </Grid>
+
+            <Grid Grid.Column="2" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="1">
+                    <StackPanel VerticalAlignment="Center">
+                        <TextBlock VerticalAlignment="Center">*(мм/дд/гггг)</TextBlock>
+                        <TextBlock Margin="0,0,0,-24" VerticalAlignment="Bottom">*(месец/дата/година)</TextBlock>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="2" Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="1">
+                    <StackPanel VerticalAlignment="Center">
+                        <TextBlock VerticalAlignment="Bottom">*(час не е задължителен)</TextBlock>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="2" Grid.Row="14">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Content="Добави" Command="{Binding AddOrder}" Height="20" Width="90"/>
+                    <Button Content="Отказ" Command="{Binding NavigateToOrdersPage}" Height="20" Width="90" Margin="20,0,0,0"/>
+                </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
