--- a/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
@@ -9,74 +9,80 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="AddPatientPage">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="175"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Grid.Row="0">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Име:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="1">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Презиме:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="2">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Фамилия:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="3">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Възраст:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="4">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Адрес:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="5">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Контакт:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="6">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap">Зъболекар:</TextBlock>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="0">
-            <TextBox Text="{Binding NewPatient.FirstName}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="1" >
-            <TextBox Text="{Binding NewPatient.Surname}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="2">
-            <TextBox Text="{Binding NewPatient.Family}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="3">
-            <TextBox Text="{Binding NewPatient.Age}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="4">
-            <TextBox Text="{Binding NewPatient.Address}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="5">
-            <TextBox Text="{Binding NewPatient.PhoneNumber}" Height="20"></TextBox>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="6" >
-            <ComboBox
-                Height="20"
-                ItemsSource="{Binding Dentists}" 
-                SelectedValue="{Binding NewPatient.DentistId}"
-                SelectedValuePath="Number"
-                DisplayMemberPath="Name">
-            </ComboBox>
-        </Grid>
-        <Grid Grid.Column="2" Grid.Row="7">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Добави" Command="{Binding AddPatient}" Height="20" Width="90"/>
-                <Button Content="Отказ" Command="{Binding NavigateToPatientsPage}" Height="20" Width="90" Margin="20,0,0,0"/>
-            </StackPanel>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="225"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" Grid.Row="0">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Име:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="1">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Презиме:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="2">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Фамилия:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="3">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Възраст:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="4">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Адрес:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="5">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Контакт:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="6">
+                <TextBlock TextAlignment="Left" VerticalAlignment="Center" FontWeight="SemiBold">Зъболекар:</TextBlock>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="0">
+                <TextBox Text="{Binding NewPatient.FirstName}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="1" >
+                <TextBox Text="{Binding NewPatient.Surname}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="2">
+                <TextBox Text="{Binding NewPatient.Family}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="3">
+                <TextBox Text="{Binding NewPatient.Age}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="4">
+                <TextBox Text="{Binding NewPatient.Address}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="5">
+                <TextBox Text="{Binding NewPatient.PhoneNumber}" Height="20"></TextBox>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="6" >
+                <ComboBox
+                    Height="20"
+                    ItemsSource="{Binding Dentists}" 
+                    SelectedValue="{Binding NewPatient.DentistId}"
+                    SelectedValuePath="Id"
+                    DisplayMemberPath="Name">
+                </ComboBox>
+            </Grid>
+            <Grid Grid.Column="2" Grid.Row="7">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Content="Добави" Command="{Binding AddPatient}" Height="20" Width="90"/>
+                    <Button Content="Отказ" Command="{Binding NavigateToPatientsPage}" Height="20" Width="90" Margin="20,0,0,0"/>
+                </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
